# snake-dash

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  Makefile  docker-compose.yml  openapi.yaml  package.json  railway.json  start.sh
.github/workflows/: ci-cd.yml
backend/: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  database.py  main.py  models.py  store.py
backend/app/routers/: auth.py  games.py  scores.py
backend/tests/: conftest.py  test_auth.py  test_cors.py  test_database.py  test_frontend.py  test_games.py  test_scores.py
backend/tests_integration/: conftest.py  test_score_flow.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/__tests__/: api-service.test.ts  game-feel.test.ts  mock-service.test.ts  snake-engine.test.ts  social-progress.test.ts
frontend/src/components/: ArenaPanel.tsx  EmptyState.tsx  MiniSnakeBoard.tsx  ModeSelector.tsx  SnakeBoard.tsx  StatCard.tsx
frontend/src/lib/: auth-context.tsx  game-audio.ts  game-feel.ts  i18n.tsx  social-progress.ts  use-require-auth.ts
frontend/src/routes/: __root.tsx  index.tsx  leaderboard.tsx  login.tsx  play.tsx  signup.tsx  watch.$gameId.tsx  watch.tsx
frontend/src/services/: api.ts  index.ts
src/: routeTree.gen.ts
src/__tests__/: mock-service.test.ts  snake-engine.test.ts
src/lib/: auth-context.tsx  snake-engine.ts
src/routes/: index.tsx  leaderboard.tsx  login.tsx  signup.tsx  watch.$gameId.tsx
src/services/: index.ts  mock.ts  types.ts
(+3 files in other folders)
