[project]
name = "snake-dash-backend"
version = "0.1.0"
description = "FastAPI backend for Snake Arena"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_integration"]
pythonpath = ["."]
addopts = "-q"
